[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Chatline.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/TestimonyContainer.gd" type="Script" id=2]

[node name="TestimonyContainer" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 135.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 131.0

[node name="IndexTemplate" type="Button" parent="VBoxContainer"]
visible = false
margin_left = 223.0
margin_right = 243.0
margin_bottom = 20.0
toggle_mode = true
text = "1"

[node name="Index" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 466.0
alignment = 1

[node name="Chatline" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 4.0
margin_right = 466.0
margin_bottom = 100.0

[node name="Input" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 466.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Button" parent="VBoxContainer/Input"]
margin_right = 113.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "<"

[node name="press" type="Button" parent="VBoxContainer/Input"]
margin_left = 117.0
margin_right = 231.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Press"

[node name="present" type="Button" parent="VBoxContainer/Input"]
margin_left = 235.0
margin_right = 348.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Present"

[node name="right" type="Button" parent="VBoxContainer/Input"]
margin_left = 352.0
margin_right = 466.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = ">"
[connection signal="pressed" from="VBoxContainer/Input/left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="VBoxContainer/Input/right" to="." method="_on_right_pressed"]
